made a modal overlay layer so that i don't have to apply backdrop blur on parent element. fixes unwanted blurring of the modal form

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -217,15 +217,26 @@ footer a:hover {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	background-color: rgba(0, 0, 0, 0.329);
-	backdrop-filter: blur(20px);
+
+	/* backdrop-filter: blur(20px); */
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
 
+.modal-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-color: rgba(0, 0, 0, 0.329);
+	height: 100%;
+	width: 100%;
+	backdrop-filter: blur(20px);
+}
+
 header h2 {
 	text-align: left;
+	width: max-content;
 	cursor: pointer;
 	position: relative;
 }
